Don't show unnecessary global shortcuts columns in keyboard shortcuts window

Elisa doesn't set any global shortcuts, so the columns are blank and
waste space.

BUG: 427072
FIXED-IN: 20.12